@@ -2,6 +2,8 @@ Revision history for Perl extension Otogiri-Plugin
 
 {{$NEXT}}
 
+    - support for latest Otogiri
+
 0.01 2013-12-24T01:41:12Z
 
     - original version
